force-app/main/default/objects/Frota_Sascar__c/Frota_Sascar__c.object-meta.xml
<CustomObject>
    <label>Frota Sascar</label>
    <nameField>
        <displayFormat>PS-{0000000000}</displayFormat>
        <label>Frota Sascar</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Frota Sascar</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>