force-app/main/default/objects/Frota_Sascar__c/fields/Id_Tipo_Veiculo__c.field-meta.xml
<CustomField>
    <fullName>Id_Tipo_Veiculo__c</fullName>
    <label>Id Tipo de veículo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>