force-app/main/default/objects/Frota_Sascar__c/fields/Necessidades_do_negocio__c.field-meta.xml
<CustomField>
    <fullName>Necessidades_do_negocio__c</fullName>
    <label>Necessidades do negócio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conservação da Carga</fullName>
            </value>
            <value>
                <fullName>Controle de custo</fullName>
            </value>
            <value>
                <fullName>Pontualidade</fullName>
            </value>
            <value>
                <fullName>Prevenção de acidentes</fullName>
            </value>
            <value>
                <fullName>Produtividade</fullName>
            </value>
            <value>
                <fullName>Segurança da carga</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>