force-app/main/default/objects/Frota_Sascar__c/fields/Segmentacao_de_mercado__c.field-meta.xml
<CustomField>
    <fullName>Segmentacao_de_mercado__c</fullName>
    <label>Segmentação de mercado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aeroportos</fullName>
            </value>
            <value>
                <fullName>Agricultura</fullName>
            </value>
            <value>
                <fullName>Alimentos e Bebidas</fullName>
            </value>
            <value>
                <fullName>Cana de Açúcar</fullName>
            </value>
            <value>
                <fullName>Carga de Valor</fullName>
            </value>
            <value>
                <fullName>Carga Especial</fullName>
            </value>
            <value>
                <fullName>Carga Expressa</fullName>
            </value>
            <value>
                <fullName>Carga Refrigerada</fullName>
            </value>
            <value>
                <fullName>Carga Seca</fullName>
            </value>
            <value>
                <fullName>Carga Sólida</fullName>
            </value>
            <value>
                <fullName>Cargas Químicas e Perigosas</fullName>
            </value>
            <value>
                <fullName>Carga Viva</fullName>
            </value>
            <value>
                <fullName>Cegonheiro</fullName>
            </value>
            <value>
                <fullName>Cimento e Betoneira</fullName>
            </value>
            <value>
                <fullName>Coleta de Lixo</fullName>
            </value>
            <value>
                <fullName>Construção</fullName>
            </value>
            <value>
                <fullName>Containers</fullName>
            </value>
            <value>
                <fullName>Corretora</fullName>
            </value>
            <value>
                <fullName>Gerenciadora de Risco</fullName>
            </value>
            <value>
                <fullName>Guincho e Reboque</fullName>
            </value>
            <value>
                <fullName>Indústria</fullName>
            </value>
            <value>
                <fullName>Logística</fullName>
            </value>
            <value>
                <fullName>Madeireira</fullName>
            </value>
            <value>
                <fullName>Mineração e Energia</fullName>
            </value>
            <value>
                <fullName>Mudanças e Armazenagem</fullName>
            </value>
            <value>
                <fullName>Ônibus Rodoviário</fullName>
            </value>
            <value>
                <fullName>Ônibus Urbano</fullName>
            </value>
            <value>
                <fullName>Portos</fullName>
            </value>
            <value>
                <fullName>Seguradoras</fullName>
            </value>
            <value>
                <fullName>Serviços de Emergência</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>