force-app/main/default/objects/Frota_Sascar__c/fields/Tipo_de_veiculo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_veiculo__c</fullName>
    <label>Tipo de veículo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>